# Iris_Series_books_collection

./: .gitignore  main.py  pyproject.toml
Book_1_bianchengbunan_code/: Bk1_Ch04_01.ipynb  Bk1_Ch04_02.ipynb  Bk1_Ch04_03.ipynb  Bk1_Ch05_01.ipynb  Bk1_Ch05_02.ipynb  Bk1_Ch05_03.ipynb  Bk1_Ch05_04.ipynb  Bk1_Ch05_05.ipynb  Bk1_Ch05_06.ipynb  Bk1_Ch05_07.ipynb  Bk1_Ch05_08.ipynb  Bk1_Ch05_09.ipynb  Bk1_Ch05_10.ipynb  Bk1_Ch05_11.ipynb  Bk1_Ch05_12.ipynb  Bk1_Ch05_13.ipynb  Bk1_Ch05_14.ipynb  Bk1_Ch05_15.ipynb  Bk1_Ch2_01.ipynb  Bk1_Ch3_02.ipynb  Bk1_Ch3_03.ipynb
Book_7_jiqixuexi_code/: Bk7_Ch03_02.ipynb  stock_levels_df.csv  stock_levels_df.pkl
