[project]
name = "iris-series-books-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "sympy>=1.14.0",
    "yfinance>=0.2.61",
]
